fixed sphere responsivesness on small screens

--- a/src/index.css
+++ b/src/index.css
@@ -759,6 +759,7 @@ Media
 
   .gyroscope {
     --size-sphere: 360px;
+    margin-left: 20px;
   }
 
   .project__description {
